[gd_scene load_steps=14 format=2]

[ext_resource path="res://Recursos/Players/Poses HD/character_zombie_walk6.png" type="Texture" id=1]
[ext_resource path="res://Recursos/Players/Poses HD/character_zombie_walk3.png" type="Texture" id=2]
[ext_resource path="res://Recursos/Players/Poses HD/character_zombie_walk2.png" type="Texture" id=4]
[ext_resource path="res://Recursos/Players/Poses HD/character_zombie_walk4.png" type="Texture" id=5]
[ext_resource path="res://Recursos/Players/Poses HD/character_zombie_walk1.png" type="Texture" id=6]
[ext_resource path="res://Recursos/Players/Poses HD/character_zombie_walk0.png" type="Texture" id=7]
[ext_resource path="res://Recursos/Players/Poses HD/character_zombie_walk5.png" type="Texture" id=8]
[ext_resource path="res://Recursos/Players/Poses HD/character_zombie_walk7.png" type="Texture" id=9]
[ext_resource path="res://Juego/Enemigos/EP.gd" type="Script" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 1 ), ExtResource( 9 ) ],
"loop": true,
"name": "Caminar",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30.955, 9.17722 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 34.3308
height = 58.7151

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32.6072, 5.43576 )

[node name="EP" type="KinematicBody2D"]
scale = Vector2( 0.7, 0.7 )
z_index = 70
collision_layer = 8
collision_mask = 4
script = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -128.258 )
frames = SubResource( 1 )
animation = "Caminar"
playing = true

[node name="ColisionPies" type="CollisionShape2D" parent="."]
position = Vector2( 0.418517, -11.0462 )
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="DetectorJugador" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorJugador"]
modulate = Color( 0.960784, 0.207843, 0.207843, 1 )
position = Vector2( -2.13385e-05, -78.1833 )
shape = SubResource( 3 )

[node name="DetectorRebote" type="Area2D" parent="."]
position = Vector2( 0, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorRebote"]
position = Vector2( 0, -163.686 )
shape = SubResource( 4 )

[connection signal="body_entered" from="DetectorJugador" to="." method="_on_DetectorJugador_body_entered"]
[connection signal="body_entered" from="DetectorRebote" to="." method="_on_DetectorRebote_body_entered"]
